libview: Use GtkContainer and GtkContainerClass in EvView and EvViewClass

https://bugzilla.gnome.org/show_bug.cgi?id=685362